RESOLVED FIXED194099
[Mac] Requesting PiP from two different WebViews gets PiP window "stuck"
https://bugs.webkit.org/show_bug.cgi?id=194099
Summary [Mac] Requesting PiP from two different WebViews gets PiP window "stuck"
Jer Noble
Reported 2019-01-31 10:42:03 PST
[Mac] Requesting PiP from two different WebViews gets PiP window "stuck"
Attachments
Patch (4.27 KB, patch)
2019-01-31 10:48 PST, Jer Noble
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.44 MB, application/zip)
2019-01-31 12:44 PST, EWS Watchlist
no flags
Jer Noble
Comment 1 2019-01-31 10:47:28 PST
Jer Noble
Comment 2 2019-01-31 10:48:40 PST
EWS Watchlist
Comment 3 2019-01-31 10:50:16 PST
Attachment 360742 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mac/VideoFullscreenInterfaceMac.mm:317: The parameter name "fullscreenChangeObserver" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 4 2019-01-31 12:44:10 PST Comment hidden (obsolete)
EWS Watchlist
Comment 5 2019-01-31 12:44:12 PST Comment hidden (obsolete)
WebKit Commit Bot
Comment 6 2019-01-31 14:28:25 PST
Comment on attachment 360742 [details] Patch Clearing flags on attachment: 360742 Committed r240822: <https://trac.webkit.org/changeset/240822>
WebKit Commit Bot
Comment 7 2019-01-31 14:28:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.